// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V1: value=0.92 (>=0.85) → green gradient #10b981→#059669 matches snapshot > V1-green-confidence-bar 1`] = `
<div>
  <div
    data-testid="confidence-bar-Confidence"
    style="display: flex; align-items: center; gap: 8px;"
  >
    <span
      style="font-size: 12px; color: rgb(55, 65, 81); font-weight: 500; white-space: nowrap;"
    >
      Confidence
    </span>
    <div
      style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
    >
      <div
        data-testid="confidence-bar-inner-Confidence"
        style="width: 92%; height: 100%; background: linear-gradient(90deg, #10b981 0%, #059669 100%); transition: width 0.3s ease;"
      />
    </div>
    <span
      data-testid="confidence-bar-pct-Confidence"
      style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
    >
      92
      %
    </span>
  </div>
</div>
`;

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V2: value=0.62 (0.45-0.85) → amber gradient #f59e0b→#d97706 matches snapshot > V2-amber-confidence-bar 1`] = `
<div>
  <div
    data-testid="confidence-bar-Amber"
    style="display: flex; align-items: center; gap: 8px;"
  >
    <span
      style="font-size: 12px; color: rgb(55, 65, 81); font-weight: 500; white-space: nowrap;"
    >
      Amber
    </span>
    <div
      style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
    >
      <div
        data-testid="confidence-bar-inner-Amber"
        style="width: 62%; height: 100%; background: linear-gradient(90deg, #f59e0b 0%, #d97706 100%); transition: width 0.3s ease;"
      />
    </div>
    <span
      data-testid="confidence-bar-pct-Amber"
      style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
    >
      62
      %
    </span>
  </div>
</div>
`;

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V3: value=0.12 (<0.45) → red gradient #ef4444→#dc2626 matches snapshot > V3-red-confidence-bar 1`] = `
<div>
  <div
    data-testid="confidence-bar-default"
    style="display: flex; align-items: center; gap: 8px;"
  >
    <div
      style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
    >
      <div
        data-testid="confidence-bar-inner-default"
        style="width: 12%; height: 100%; background: linear-gradient(90deg, #ef4444 0%, #dc2626 100%); transition: width 0.3s ease;"
      />
    </div>
    <span
      data-testid="confidence-bar-pct-default"
      style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
    >
      12
      %
    </span>
  </div>
</div>
`;

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V4: Include decision card → snapshot matches (green badge + ConfidenceBar green) > V4-include-card 1`] = `
<div>
  <div
    data-testid="abstractor-card-PMID-38924711"
    style="border: 1px solid rgb(229, 231, 235); border-radius: 8px; padding: 16px; background: rgb(255, 255, 255); box-shadow: 0 1px 2px rgba(0,0,0,0.04); position: relative;"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; gap: 12px; margin-bottom: 12px; flex-wrap: wrap;"
    >
      <div
        style="flex: 1 1 0%; min-width: 220px;"
      >
        <div
          style="display: flex; gap: 8px; align-items: center; flex-wrap: wrap; margin-bottom: 8px;"
        >
          <span
            data-testid="badge-decision-PMID-38924711"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 600; background: rgb(209, 250, 229); color: rgb(6, 95, 70); border: 1px solid rgb(110, 231, 183);"
          >
            ✓ Include
          </span>
          <span
            data-testid="badge-year-PMID-38924711"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 500; background: rgb(224, 231, 255); color: rgb(55, 48, 163); border: 1px solid rgb(165, 180, 252);"
          >
            📅 
            2024
          </span>
        </div>
        <h3
          data-testid="card-title-PMID-38924711"
          style="font-size: 15px; font-weight: 600; margin: 0px 0px 4px 0px; color: rgb(17, 24, 39); line-height: 1.4;"
        >
          Dapagliflozin in Patients with Heart Failure and Type 2 Diabetes
        </h3>
        <div
          style="font-size: 12px; color: rgb(107, 114, 128); margin-bottom: 2px;"
        >
          New England Journal of Medicine
        </div>
      </div>
      <div
        style="min-width: 200px; flex: 0 0 260px;"
      >
        <div
          data-testid="confidence-bar-Confidence"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 12px; color: rgb(55, 65, 81); font-weight: 500; white-space: nowrap;"
          >
            Confidence
          </span>
          <div
            style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
          >
            <div
              data-testid="confidence-bar-inner-Confidence"
              style="width: 92%; height: 100%; background: linear-gradient(90deg, #10b981 0%, #059669 100%); transition: width 0.3s ease;"
            />
          </div>
          <span
            data-testid="confidence-bar-pct-Confidence"
            style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
          >
            92
            %
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(4, minmax(0, 1fr)); gap: 12px; margin-bottom: 12px;"
    >
      <div
        data-testid="pico-p-PMID-38924711"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          P · Population
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          T2DM patients with HFrEF
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span>
            n=
            4744
          </span>
          <span>
            age 
            40
            –
            85
          </span>
        </div>
      </div>
      <div
        data-testid="pico-i-PMID-38924711"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          I · Intervention
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          Dapagliflozin 10mg
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span>
            dose: 
            10mg QD
          </span>
          <span>
            ×
            24mo
          </span>
          <span>
            n=
            2373
          </span>
        </div>
      </div>
      <div
        data-testid="pico-c-PMID-38924711"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          C · Comparator
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          Placebo
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128);"
        >
          <span>
            type: 
            placebo
          </span>
        </div>
      </div>
      <div
        data-testid="pico-o-PMID-38924711"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          O · Outcomes
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 6px;"
        >
          <div
            data-testid="outcome-0-PMID-38924711"
            style="font-size: 11px; padding: 4px 6px; background: rgb(255, 255, 255); border-radius: 4px; border: 1px solid rgb(243, 244, 246);"
          >
            <div
              style="font-weight: 600; color: rgb(17, 24, 39); margin-bottom: 2px;"
            >
              CV Death or HHF
            </div>
            <div
              style="color: rgb(75, 85, 99); display: flex; gap: 6px; flex-wrap: wrap; line-height: 1.5;"
            >
              <span>
                MD=
                -3.2
              </span>
              <span>
                RR=
                0.74
              </span>
              <span>
                CI: [
                0.65
                , 
                0.85
                ]
              </span>
              <span
                style="color: rgb(5, 150, 105);"
              >
                p=
                0.001
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding: 8px; background: rgb(248, 250, 252); border-radius: 6px; margin-bottom: 12px; font-size: 12px; color: rgb(71, 85, 105); border: 1px solid rgb(226, 232, 240);"
    >
      <div
        style="font-weight: 600; margin-bottom: 4px; font-size: 11px;"
      >
        Triage Reasons:
      </div>
      <ul
        style="margin: 0px; padding-left: 20px;"
      >
        <li>
          C3: PICO 4/4 ok + outcome p_value&lt;0.05
        </li>
      </ul>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center; gap: 12px; flex-wrap: wrap;"
    >
      <div
        style="display: flex; gap: 8px; flex-wrap: wrap;"
      >
        <button
          data-testid="btn-accept-include"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(16, 185, 129); background: rgb(16, 185, 129); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✓ 接受 Include
        </button>
        <button
          data-testid="btn-modify-review"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(245, 158, 11); background: rgb(245, 158, 11); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✎ 修改 → Review
        </button>
        <button
          data-testid="btn-accept-exclude"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(239, 68, 68); background: rgb(239, 68, 68); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✗ 接受 Exclude
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V5: Exclude decision card → snapshot matches (red badge + confidence low) > V5-exclude-card 1`] = `
<div>
  <div
    data-testid="abstractor-card-PMID-10000002"
    style="border: 1px solid rgb(229, 231, 235); border-radius: 8px; padding: 16px; background: rgb(255, 255, 255); box-shadow: 0 1px 2px rgba(0,0,0,0.04); position: relative;"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; gap: 12px; margin-bottom: 12px; flex-wrap: wrap;"
    >
      <div
        style="flex: 1 1 0%; min-width: 220px;"
      >
        <div
          style="display: flex; gap: 8px; align-items: center; flex-wrap: wrap; margin-bottom: 8px;"
        >
          <span
            data-testid="badge-decision-PMID-10000002"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 600; background: rgb(254, 226, 226); color: rgb(153, 27, 27); border: 1px solid rgb(252, 165, 165);"
          >
            ✗ Exclude
          </span>
          <span
            data-testid="badge-year-PMID-10000002"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 500; background: rgb(224, 231, 255); color: rgb(55, 48, 163); border: 1px solid rgb(165, 180, 252);"
          >
            📅 
            2024
          </span>
        </div>
        <h3
          data-testid="card-title-PMID-10000002"
          style="font-size: 15px; font-weight: 600; margin: 0px 0px 4px 0px; color: rgb(17, 24, 39); line-height: 1.4;"
        >
          Dapagliflozin in Patients with Heart Failure and Type 2 Diabetes
        </h3>
        <div
          style="font-size: 12px; color: rgb(107, 114, 128); margin-bottom: 2px;"
        >
          New England Journal of Medicine
        </div>
      </div>
      <div
        style="min-width: 200px; flex: 0 0 260px;"
      >
        <div
          data-testid="confidence-bar-Confidence"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 12px; color: rgb(55, 65, 81); font-weight: 500; white-space: nowrap;"
          >
            Confidence
          </span>
          <div
            style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
          >
            <div
              data-testid="confidence-bar-inner-Confidence"
              style="width: 32%; height: 100%; background: linear-gradient(90deg, #ef4444 0%, #dc2626 100%); transition: width 0.3s ease;"
            />
          </div>
          <span
            data-testid="confidence-bar-pct-Confidence"
            style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
          >
            32
            %
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(4, minmax(0, 1fr)); gap: 12px; margin-bottom: 12px;"
    >
      <div
        data-testid="pico-p-PMID-10000002"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          P · Population
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          T1DM adolescents
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span>
            n=
            120
          </span>
          <span>
            age 
            12
            –
            18
          </span>
        </div>
      </div>
      <div
        data-testid="pico-i-PMID-10000002"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          I · Intervention
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          Insulin glargine
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span>
            dose: 
            0.5U/kg
          </span>
          <span>
            n=
            60
          </span>
        </div>
      </div>
      <div
        data-testid="pico-c-PMID-10000002"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          C · Comparator
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          Insulin detemir
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128);"
        >
          <span>
            type: 
            active
          </span>
        </div>
      </div>
      <div
        data-testid="pico-o-PMID-10000002"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          O · Outcomes
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 6px;"
        >
          <div
            data-testid="outcome-0-PMID-10000002"
            style="font-size: 11px; padding: 4px 6px; background: rgb(255, 255, 255); border-radius: 4px; border: 1px solid rgb(243, 244, 246);"
          >
            <div
              style="font-weight: 600; color: rgb(17, 24, 39); margin-bottom: 2px;"
            >
              HbA1c change
            </div>
            <div
              style="color: rgb(75, 85, 99); display: flex; gap: 6px; flex-wrap: wrap; line-height: 1.5;"
            >
              <span>
                MD=
                -0.3
              </span>
              <span
                style="color: rgb(107, 114, 128);"
              >
                p=
                0.12
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding: 8px; background: rgb(248, 250, 252); border-radius: 6px; margin-bottom: 12px; font-size: 12px; color: rgb(71, 85, 105); border: 1px solid rgb(226, 232, 240);"
    >
      <div
        style="font-weight: 600; margin-bottom: 4px; font-size: 11px;"
      >
        Triage Reasons:
      </div>
      <ul
        style="margin: 0px; padding-left: 20px;"
      >
        <li>
          C2: condition not T2DM
        </li>
      </ul>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center; gap: 12px; flex-wrap: wrap;"
    >
      <div
        style="display: flex; gap: 8px; flex-wrap: wrap;"
      >
        <button
          data-testid="btn-accept-include"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(16, 185, 129); background: rgb(16, 185, 129); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✓ 接受 Include
        </button>
        <button
          data-testid="btn-modify-review"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(245, 158, 11); background: rgb(245, 158, 11); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✎ 修改 → Review
        </button>
        <button
          data-testid="btn-accept-exclude"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(239, 68, 68); background: rgb(239, 68, 68); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✗ 接受 Exclude
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wave9c Abstractor UI ConfidenceBar + AbstractorCard (18 tests) > V6: Review decision card → snapshot matches (amber badge) > V6-review-card 1`] = `
<div>
  <div
    data-testid="abstractor-card-PMID-10000003"
    style="border: 1px solid rgb(229, 231, 235); border-radius: 8px; padding: 16px; background: rgb(255, 255, 255); box-shadow: 0 1px 2px rgba(0,0,0,0.04); position: relative;"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; gap: 12px; margin-bottom: 12px; flex-wrap: wrap;"
    >
      <div
        style="flex: 1 1 0%; min-width: 220px;"
      >
        <div
          style="display: flex; gap: 8px; align-items: center; flex-wrap: wrap; margin-bottom: 8px;"
        >
          <span
            data-testid="badge-decision-PMID-10000003"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 600; background: rgb(254, 243, 199); color: rgb(146, 64, 14); border: 1px solid rgb(252, 211, 77);"
          >
            ⚠ Review
          </span>
          <span
            data-testid="badge-year-PMID-10000003"
            style="padding: 3px 10px; border-radius: 999px; font-size: 12px; font-weight: 500; background: rgb(224, 231, 255); color: rgb(55, 48, 163); border: 1px solid rgb(165, 180, 252);"
          >
            📅 
            2024
          </span>
        </div>
        <h3
          data-testid="card-title-PMID-10000003"
          style="font-size: 15px; font-weight: 600; margin: 0px 0px 4px 0px; color: rgb(17, 24, 39); line-height: 1.4;"
        >
          Dapagliflozin in Patients with Heart Failure and Type 2 Diabetes
        </h3>
        <div
          style="font-size: 12px; color: rgb(107, 114, 128); margin-bottom: 2px;"
        >
          New England Journal of Medicine
        </div>
      </div>
      <div
        style="min-width: 200px; flex: 0 0 260px;"
      >
        <div
          data-testid="confidence-bar-Confidence"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 12px; color: rgb(55, 65, 81); font-weight: 500; white-space: nowrap;"
          >
            Confidence
          </span>
          <div
            style="flex: 1 1 0%; height: 8px; background-color: rgb(229, 231, 235); border-radius: 4px; overflow: hidden; min-width: 40px;"
          >
            <div
              data-testid="confidence-bar-inner-Confidence"
              style="width: 62%; height: 100%; background: linear-gradient(90deg, #f59e0b 0%, #d97706 100%); transition: width 0.3s ease;"
            />
          </div>
          <span
            data-testid="confidence-bar-pct-Confidence"
            style="font-size: 12px; font-weight: 600; color: rgb(17, 24, 39); min-width: 32px; text-align: right; white-space: nowrap;"
          >
            62
            %
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: grid; grid-template-columns: repeat(4, minmax(0, 1fr)); gap: 12px; margin-bottom: 12px;"
    >
      <div
        data-testid="pico-p-PMID-10000003"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          P · Population
        </div>
        <div
          style="font-size: 12px; color: rgb(17, 24, 39); margin-bottom: 4px;"
        >
          T2DM elderly
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        >
          <span>
            n=
            320
          </span>
          <span>
            age 
            65
            –
            ?
          </span>
        </div>
      </div>
      <div
        data-testid="pico-i-PMID-10000003"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          I · Intervention
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128); display: flex; gap: 8px; flex-wrap: wrap;"
        />
      </div>
      <div
        data-testid="pico-c-PMID-10000003"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          C · Comparator
        </div>
        <div
          style="font-size: 11px; color: rgb(107, 114, 128);"
        />
      </div>
      <div
        data-testid="pico-o-PMID-10000003"
        style="padding: 10px; background: rgb(249, 250, 251); border-radius: 6px; border: 1px solid rgb(229, 231, 235);"
      >
        <div
          style="font-size: 11px; font-weight: 700; color: rgb(75, 85, 99); margin-bottom: 6px;"
        >
          O · Outcomes
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 6px;"
        >
          <div
            style="font-size: 11px; color: rgb(156, 163, 175); font-style: italic;"
          >
            —
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding: 8px; background: rgb(248, 250, 252); border-radius: 6px; margin-bottom: 12px; font-size: 12px; color: rgb(71, 85, 105); border: 1px solid rgb(226, 232, 240);"
    >
      <div
        style="font-weight: 600; margin-bottom: 4px; font-size: 11px;"
      >
        Triage Reasons:
      </div>
      <ul
        style="margin: 0px; padding-left: 20px;"
      >
        <li>
          C4: missing fields: intervention,comparison
        </li>
      </ul>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center; gap: 12px; flex-wrap: wrap;"
    >
      <div
        style="display: flex; gap: 8px; flex-wrap: wrap;"
      >
        <button
          data-testid="btn-accept-include"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(16, 185, 129); background: rgb(16, 185, 129); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✓ 接受 Include
        </button>
        <button
          data-testid="btn-modify-review"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(245, 158, 11); background: rgb(245, 158, 11); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✎ 修改 → Review
        </button>
        <button
          data-testid="btn-accept-exclude"
          style="padding: 8px 16px; border-radius: 6px; border: 1px solid rgb(239, 68, 68); background: rgb(239, 68, 68); color: rgb(255, 255, 255); font-size: 13px; font-weight: 600; cursor: pointer;"
        >
          ✗ 接受 Exclude
        </button>
      </div>
    </div>
  </div>
</div>
`;
